# lawsun

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 094b5fd57bef_add_timestamps_to_parent_chunks.py  2dfe4849a294_initial.py  6091c50a1f22_removed_reverse_relationship.py
app/: main.py
app/admin/: __init__.py  auth.py  views.py
app/api/: dependencies.py
app/api/routers/v1/: __init__.py  auth.py  ministry.py  users.py
app/core/: config.py  exceptions.py
app/db/: redis.py  session.py
app/db/column/: __init__.py  bm25.py
app/db/index/: __init__.py  bm25.py  diskann.py
app/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  legal_body.py  user.py
app/repositories/: __init__.py  ministry.py  token.py  user.py
app/schemas/: base.py  conversation.py  document.py  ministry.py
app/schemas/auth/: __init__.py  auth.py  user.py
app/services/: auth.py  ministry.py  user.py
docker/db/: Dockerfile  init-database.sh
scripts/: create_superuser.py
