[project]
name = "lawsun"
version = "0.1.0"
description = "A RAG app for Laws and Acts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.135.3",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]
